# rs.carli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: single.rs
examples/multiple/: main.rs
examples/multiple/app/: mod.rs
examples/multiple/app/subcommand/: goodbye.rs  hello.rs  mod.rs
src/: command.rs  error.rs  io.rs  lib.rs
